@@ -21,6 +21,7 @@ since 1.2 relase ( 'til 1.3 beta 1 :-)
 - Paper layout can now be applied to all sheets
 - now you can define the default cell style
 - Autoscroll while selecting now also available for columns and row headers
+- When cell is too short, then the content is now available in the tooltip
 
 
 New functions:
